--- a/screen.css
+++ b/screen.css
@@ -72,3 +72,11 @@ p {
     font-size: 5em;
     color: darkturquoise;
 }
+
+img {
+     width: 33%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
