--- a/styles/responsivehomepage.css
+++ b/styles/responsivehomepage.css
@@ -60,8 +60,17 @@ nav li {
     padding: 0.25em;
     margin-top: .5em;
     background-color: gold;
-    box-shadow: -2px 2px 10px black;
-    
+    box-shadow: -2px 2px 5px black;
+}
+
+nav li:hover {
+    width: 100%;
+    border: 0.3em solid paleturquoise;
+    border-radius: 0.5em;
+    padding: 0.25em;
+    margin-top: .5em;
+    background-color: gold;
+    box-shadow: -8px 8px 10px black;
 }
 
 a {
@@ -97,6 +106,14 @@ h3 a {
 }
 
 
+#scratch-window {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
+
 @media only screen and (min-width: 600px) {
     nav {
         display: flex;
@@ -117,6 +134,8 @@ h3 a {
         margin-left: 0.6em;
     }
 }
+
+
 
 
 
