--- a/styles/responsivehomepage.css
+++ b/styles/responsivehomepage.css
@@ -106,11 +106,17 @@ h3 a {
 }
 
 
-#scratch-window {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 
