--- a/styles/responsivehomepage.css
+++ b/styles/responsivehomepage.css
@@ -9,7 +9,7 @@ html, body {
     width: 100%;
     height: 100vh;
     overflow: scroll;
-    background-image: linear-gradient(turquoise, gold);
+    background-image: linear-gradient(darkgrey, black);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'PT Sans Caption', sans-serif;
@@ -21,15 +21,23 @@ header, nav, footer {
 }
 
 header h1, h2 {
-    color: gold;
+    color: ghostwhite;
     padding-left: 1em;
-    text-shadow: 2px 2px rgba(0,0,0, 0.5);
 }
+
+header h1 {
+    font-size: 5em;
+}
+
+header h2 {
+    font-size: 4em;
+}
+
 
 #banner-image {
     height: 50vh;
-    background-image: url(../images/downsizedImages/SparksPanoDownSize.jpg);
-    background-size: cover;
+    background-image: url(/images/downsizedImages/reflectionsparksbw.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: -6px 3px 10px black;
@@ -60,17 +68,8 @@ nav li {
     padding: 0.25em;
     margin-top: .5em;
     background-color: gold;
-    box-shadow: -2px 2px 5px black;
-}
-
-nav li:hover {
-    width: 100%;
-    border: 0.3em solid paleturquoise;
-    border-radius: 0.5em;
-    padding: 0.25em;
-    margin-top: .5em;
-    background-color: gold;
-    box-shadow: -8px 8px 10px black;
+    box-shadow: -2px 2px 10px black;
+    
 }
 
 a {
@@ -96,27 +95,13 @@ footer {
 
 h3 a {
     text-decoration: none;
-    color: darkturquoise;
+    color: whitesmoke;
     text-shadow: 1px 1px 5px white;
-    border: 0.3em solid paleturquoise;
+    border: 0.1em solid whitesmoke;
     border-radius: 0.5em;
     padding: 0.4em;
     box-shadow: -2px 2px 10px black;
     width: 100%;
-}
-
-
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 
@@ -133,15 +118,13 @@ h3 a {
     #side-image {
         display: block;
         width: 30%;
-        background-image: url(../images/downsizedImages/HoneyBeeLupine.jpg);
+        background-image: url(/images/downsizedImages/sparkssouthsistersunset.jpg);
         background-size: cover;
         background-position: center;
         box-shadow: -6px 3px 10px black;
         margin-left: 0.6em;
     }
 }
-
-
 
 
 
